--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -63,7 +63,7 @@
       }
     </script>
 
-    <title>Document</title>
+    <title>Please wait...</title>
     <style>
       #loader {
         width: 0%;
